# chatbot

./: .gitignore  README.md  main.py  main_page.py  pyproject.toml  run.bat  test.py  🏠_HOME.py  💫main_page.py
logics/: basic_model.py  prompts.yaml
pages/: 0_💥_챗봇연습.py  1_💘_서비스1단계.py  1_🧾_챗봇.py  2_🧸_이미지봇.py  3_💘_서비스1단계.py  4_💕_서비스2단계.py
